--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   intl: ^0.19.0
   flutter:
     sdk: flutter
+  image_picker: ^1.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
